test/sema/call-mutating-method-from-nonmutating-method.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct C {
    // CHECK: [[@LINE+1]]:15: error: cannot call mutating function 'C.g' on immutable receiver
    def f() { g() }
    mutating def g() {}
}
